--- a/style.css
+++ b/style.css
@@ -824,6 +824,16 @@ h4 {
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
 }
+/*modification contraste couleur  */
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 1024px) {
     .bloc {
