ajout régle css et suppression de regle css multiple inutile

--- a/style.css
+++ b/style.css
@@ -701,7 +701,8 @@ p {
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: auto;
+    color:#3B3B3B!important;
 }
 
 h2 {
