rectification code couleur por h1 et p avec class css commune

--- a/style.css
+++ b/style.css
@@ -660,6 +660,7 @@ a {
 
 .hero-bloc-text {
     font-size: 38px;
+
 }
 
 .hero-bloc-text-sub {
@@ -776,7 +777,7 @@ h4 {
 }
 
 .tc-white {
-    color:#FBE2D5!important;
+    color:#2F1104!important;
 }
 
 .btn-atomic-tangerine {
