--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
+.d-bloc a,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -476,7 +476,8 @@ button {
 }
 
 .icon-md {
-    font-size: 30px!important;
+    font-size: 16px;
+   
 }
 
 .icon-lg {
@@ -651,7 +652,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
 }
 
 .container {
@@ -703,7 +704,8 @@ p {
 .social {
     max-width: 400px;
     margin: auto;
-    color:#3B3B3B!important;
+    color:black !important;
+    text-decoration: none
 }
 
 h2 {
