--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ button {
 
 .icon-md {
     font-size: 16px;
-   
+
 }
 
 .icon-lg {
@@ -726,9 +726,6 @@ h3 {
     box-shadow: 0px 0px 0px #000000;
 }
 
-h1 {
-    color: #333333!important;
-}
 
 h4 {
     color: #333333!important;
@@ -779,7 +776,7 @@ h4 {
 }
 
 .tc-white {
-    color:#2F1104!important;
+    color:#E8E8E8;
 }
 
 .btn-atomic-tangerine {
