rectification contraste couleur au normes

--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ nav .caret {
 .mg-lg {
     margin-top: 10px;
     margin-bottom: 40px;
-    color: #0D0D0D!!important;
+    color: #1F1F1F!important;
 }
 
 .btn {
